try to fix donate divs overlapping instead of wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -138,36 +138,34 @@ p {
     top: 5px;
 }
 
-
-
 .float-container {
     position: absolute;
 }
 
 .float-child {
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     border-radius: 25px;
 
     background-color: rgba(128,0,128, 0.7);
+    border: 1px solid white;
     width: 35em;
     position: absolute;
     align-items: center;
     justify-content: center;
-}
-
-.float-child.left {
-    display: flex;
-    flex-direction: column;
-    left: 15em;
-    border: 1px solid white;
-}
-
-.float-child.right {
-    display: flex;
-    flex-direction: column;
-    right: 15em;
-    border: 1px solid white;
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 10px;
+}
+
+.float-child.left {
+    float: left;
+    left: 15em;
+
+}
+
+.float-child.right {
+    right: 15em;
+
 }
